# EuphoriaMessages-Endstone

./: README.md  pyproject.toml
src/euphoriamessages/: __init__.py  config.toml  euphoriamessages_plugin.py
